Finished counting 4-node graphlets

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -382,7 +382,7 @@
 \end{figure}
 
 \subsection{الگوریتم ترکیبیاتی شمارش گرافلت‌ها}
-فرض کنید $x$ هر رأس از گراف $G$ باشد. مسئله، محاسبه تعداد دفعاتی است که $x$ در اوربیت $O_i$ از گرافلت‌های القایی گراف $G$ قرار گرفته است. این عدد را با $o_i$ نمایش می‌دهیم. الگوریتم بر اساس دستگاهی از معادل خطی کار می‌کند که تعداد اوربیت‌های مختلف، $o_i$ ها، را به هم مربوط می‌کند. از آنجایی که رتبه این دستگاه یکی کمتر از تعداد اوربیت‌ها خواهد بود، می‌توان با شمارش تنها یکی از اوربیت‌های گراف، تعداد مابقی آن‌ها را بدست آورد. در ادامه ابتدا نحوه ساختن این دستگاه را شرح داده و سپس روش تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها را توضیح خواهیم داد.  
+فرض کنید $x$ هر رأس از گراف $G$ باشد. مسئله، محاسبه تعداد دفعاتی است که $x$  روی اوربیت $O_i$ از گرافلت‌های القایی گراف $G$ قرار گرفته است. این عدد را با $o_i$ نمایش می‌دهیم. الگوریتم بر اساس دستگاهی از معادل خطی کار می‌کند که تعداد اوربیت‌های مختلف، $o_i$ ها، را به هم مربوط می‌کند. از آنجایی که رتبه این دستگاه یکی کمتر از تعداد انواع اوربیت‌ها خواهد بود می‌توان با شمارش تنها یکی از آن‌ها، تعداد مابقی را بدست آورد. در ادامه، نحوه ساخت و حل این دستگاه برای هر رأس را شرح داده و سپس روش محاسبه تعداد گرافلت‌های گراف از روی تعداد اوربیت رئوس را توضیح می‌دهیم.
 
 \subsubsection{شمارش اوربیت‌های چهار رأسی}
 %سمت راست معادلاتی که دستگاه را تشکیل می‌دهد شامل عباراتی است که از گراف $G$ محاسبه می‌شود.
@@ -408,11 +408,38 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 
 از آنجایی که تنها دو گرافلت سه رأسی وجود دارد و حالت‌های گسترش نیز محدود‌اند، می‌توان تمام گسترش‌های ممکن را در نظر گرفت و از آن‌ها یک دستگاه با ده معادله مستقل خطی و یازده متغیر (متناظر با یازده اوربیت گرافلت‌های چهار رأسی) استخراج کرد. در ضمیمه \ارجا{appendix:combinatorial-counting} این معادلات را آورده‌ایم.
 
-عبارات موجود در سمت راست این معادلات تنها وابسته به گراف $G$ هستند و باید برای هر رأس $x$ محاسبه شوند.
+عبارات موجود در سمت راست این معادلات، تنها وابسته به گراف $G$ هستند و باید برای هر رأس $x$ محاسبه شوند. برای افزایش سرعت اجرا، برای هر دو رأس $u$ و $v$ مقادیر $c(u,v)$ و $p(u,v)$ را از قبل محاسبه می‌کنیم. البته کافی است این مقادیر را تنها برای رئوس مجاور و نه همه رئوس، بدست آورد زیرا طبق تعریف، $p(u,v)$ فقط برای دو رأس مجاور تعریف می‌شود و همچنین در تمام معادلات به غیر از معادله آخر، $c(u,v)$ تنها برای رئوسی که همسایه هستند مورد نیاز است. بنابراین با اختصاص $O(m)$ فضا، این مقادیر را محاسبه می‌کنیم. برای معادله آخر، کافی است تعداد مسیر‌های به طول دو که از رأس $x$ شروع می‌شوند و به رأس $y$ خاتمه می‌یابند را بشماریم. این کار نیاز به $O(n)$ فضا دارد. چون تعداد اوربیت‌ها را برای هر رأس جداگانه شمارش می‌کنیم، می‌توان از این فضا مجدداً استفاده نمود. با این وصف، مقادیر سمت راست معادله در زمان ثابت و میزان حافظه $O(m+n)$ محاسبه می‌شوند.
 
- برای سرعت بخشیدن به اجرای الگوریتم، مقادیر $c(u,v)$ و $p(u,v)$ را از قبل محاسبه می‌کنیم. البته کافی است این مقادیر را تنها برای جفت رئوس همسایه محاسبه کرد زیرا طبق تعریف، $p(u,v)$ فقط برای دو رأس مجاور تعریف می‌شود و همچنین در تمام معادلات به غیر از معادله آخر، $c(u,v)$ تنها برای رئوسی که همسایه هستند مورد نیاز است. بنابراین با اختصاص $O(m)$ فضا، این مقادیر را محاسبه می‌کنیم. برای معادله آخر، کافی است تعداد مسیر‌های به طول دو برای هر رأس را بشماریم. 
+همانطور که ذکر شد، برای یافتن مقادیر متغیرها، باید یکی از اوربیت‌ها را شمارش کنیم. اوربیت ۱۴ یا گرافلت چهار رأسی کامل برای این منظور مناسب است زیرا احتمال وقوع آن در یک گراف تُنُک کمتر از مابقی گرافلت‌هاست. در ادامه الگوریتم شمارش این گرافلت را توضیح می‌دهیم.
+
+ساده‌ترین راه برای شمارش تعداد گرافلت‌های $G_8$ که $x_1$ روی آن‌ها قرار دارد، یک الگوریتم مرحله‌ای با شروع از همین رأس است بطوری که در هر مرحله، رأس $x_i$ را که در مجاورت رأس اضافه شده در مرحله قبل یعنی $x_{i-1}$ قرار دارد، به مجموعه رئوس اضافه می‌کنیم اگر این رأس با تمام رئوس اضافه شده قبلی مجاور باشد. پس وقتی می‌خواهیم یکی از همسایه‌های $x_3$ را به عنوان $x_4$ اضافه کنیم، باید بررسی کنیم که آیا این رأس با $x_1$ و $x_2$ مجاور است یا خیر. با فرض اینکه با یک گراف تنک سر و کار داریم، این امر به ندرت اتفاق می‌افتد.
+
+یک راه بهتر این است که ابتدا همسایه‌های مشترک $x_1$ و $x_2$ را در نظر بگیریم. اینکار در $O(d)$ امکان‌پذیر است. سپس یک دوتای مثل $(x_3,x_4)$ را از این مجموعه انتخاب می‌کنیم و بررسی می‌کنیم که رئوس این دوتایی، مجاور باشند. کاندید‌هایی که از این طریق انتخاب می‌شوند، برخلاف الگوریتم قبل، تنها باید در یک شرط صدق کنند.
+
+برای جلوگیری از شمارش دوباره یک گرافلت، ترتیب قراردادی $x_2 < x_3 < x_4$ را در نظر می‌گیریم. اگرچه هر دو الگوریتم از نظر تئوری، پیچیدگی یکسان و برابر$O(d^3)$ دارند ولی در عمل برای گراف‌های تنک، الگوریتم دوم بسیار سریعتر است.
+
+این روش را می‌توان برای شمارش گرافلت‌های کامل پنج رأسی و بیشتر هم بکار برد. در هر مرحله، لیست $C_i$ از رئوس کاندید برای $x_i$ را نگهداری می‌کنیم بطوری که این رئوس با تمام رئوس قبل مجاور باشند. یکی از این کاندیدها را به عنوان $x_i$ انتخاب کرده و لیست $C_{i+1} = C_i\cap N(x_i)$ را تشکیل می‌دهیم و اینکار را تا جایی که به تعداد رئوس مورد نظر برسیم ادامه می‌دهیم. برای شمارش تمام گرافلت‌های کامل $k$-رأسی روی رأس $x$، این الگوریتم در زمان $O(d^{k-1})$ قابل اجراست.
+
+\begin{figure}[b]
+\centering
+\includegraphics[scale=0.3]{./4-node-graphlet-1.png}
+\caption{رابطه بین اوربیت‌های $O_9$ و $O_{12}$.}
+\label{fig:o9-o12-relation}
+\end{figure}
+
+\begin{figure}[b]
+\centering
+\includegraphics[scale=0.3]{./4-node-graphlet-2.png}
+\caption{رابطه بین اوربیت‌های $O_6$ و $O_9$.}
+\label{fig:svm-margin}
+\end{figure}
+
+حال که تعداد اوربیت $O_{14}$ را داریم، می‌توانیم در زمان ثابت، معادلات را حل کرده و تعداد اوربیت‌های هر رأس را بدست آوریم. بنابراین کل زمان اجرا برای محاسبه تعداد اوربیت‌های تمام رئوس برابر است با $O(m.d+T_4)$ که $O(T_4) = O(d^3)$ زمان مورد نیاز برای شمارش گرافلت‌های کامل روی چهار رأس است.
+
+
 
 \subsubsection{شمارش اوربیت‌های پنج رأسی}
+برای شمارش اوربیت‌های چهار رأسی، تمام حالت‌های ممکن جهت گسترش یک گرافلت سه رأسی به گرافلت چهار رأسی را در نظر گرفتیم. اینکار برای گذر از چهار رأس به پنج رأس ممکن نیست زیرا تعداد بسیار زیادی معادله بوجود می‌آید که مستقل نیستند. 
 
 \subsection{تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها}
 
