Fix figure placement

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -393,6 +393,13 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 
 عکس این مطلب نیز صحیح است: هر گرافلت چهار رأسی را می‌توان با افزودن یک رأس به یکی از گرافلت‌های سه رأسی ساخت. جهت یافتن رابطه تعداد اوربیت‌های گرافلت‌های چهار رأسی برای رأس $x$، تمام اوربیت‌های سه‌رأسی که $x$ روی آن‌ها قرار گرفته است را می‌یابیم و سپس امکان گسترش آن‌ها به گرافلت‌های چهار رأسی را بررسی می‌کنیم.
 
+\begin{figure}[ht]
+\centering
+\includegraphics[scale=0.3]{./4-node-graphlet-1.png}
+\caption{رابطه بین اوربیت‌های $O_9$ و $O_{12}$.}
+\label{fig:o9-o12-relation}
+\end{figure}
+
 به عنوان مثال، همانطور که در شکل \ارجا{fig:o9-o12-relation} می‌بینید رئوس $x$،$y$ و $z$ گرافلت $G_1$ را القا می‌کنند که یک مسیر به طول دو است. این گرافلت، توسط $w$ و یال‌های $(w,y)$ و $(w,z)$ به یک گرافلت چهار رأسی تبدیل می‌شود. تعداد رأس‌های ممکن مثل $w$ برابر است با $c(y,z)$. در شکل $c(y,z) = 3$ تا از این رئوس وجود دارد که با $w_1$ ، $w_2$ و $w_3$ نشان داده شده‌اند. یال $(x,w)$ ممکن است در گراف $G$ وجود داشته باشد (مثلاً برای $w_3$ این حالت در نظر گرفته شده) یا ممکن است وجود نداشته باشد (رئوس $w_1$ و $w_2$ اینگونه‌اند). بدون این یال، رئوس $x$ ، $y$ ، $z$ و $w$ گرافلت $G_6$ را تشکیل می‌دهند که $x$ روی اوربیت $O_9$ قرار گرفته است. وجود این یال باعث می‌شود که رئوس مذکور، گرافلت $G_7$ را بسازند که در آن $x$ روی اوربیت $O_{12}$ قرار گرفته‌است. از آنجایی که تمام $c(y,z)$ رأس در $N(y) \cap N(z)$ باید یا در $G_7$ یا در $G_6$ باشند که متقابلاً باعث می‌شود $x$ در $O_9$ یا $O_{12}$ قرار گیرد، پس برای سه‌تایی $x$، $y$ و $z$ خواهیم داشت: $o_9 + o_{12} = c(y,z)$.
 
 حال برای تمام مسیرهای به طول دو که از $x$ شروع می‌شوند، این عدد را جمع می‌زنیم. البته باید دقت داشت که در جمع، تقارن‌ها در نظر گرفته‌شوند: هر گرافلت $G_6$  در گراف $G$ ، با تعویض جای $z$ و $w$ دوبار شمره می‌شود. این اتفاق با تعویض $y$‌ و $w$ برای $G_7$ هم رخ می‌دهد. با این حساب می‌توانیم معادله زیر را تشکیل دهیم:
@@ -401,7 +408,14 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 \end{equation*}
 که در آن $G[\{x,y,z\}]$ زیرگراف القایی از $G$ است که توسط سه رأس $x$ ، $y$ و $z$ ساخته می‌شود.
 
-برای مثالی دیگر، رابطه بین اوربیت‌های $O_6$ و $O_9$ را بررسی می‌کنیم. برای اینکار یک مسیر به طول دو از رئوس $x$ ، $y$ و $z$ را توسط یک مسیر دیگر که از $x$ و $y$ شروع می‌شود، گسترش می‌دهیم؛ قبلاً تعداد این مسیرها را با $p(x,y)$ نمادگذاری کردیم. بسته به اینکه رأس جدید ($w$) با $z$ همسایه باشد یا نه، با یک گرافلت $G_6$ یا $G_4$ روبرو هستیم. با احتساب تقارن، و همچنین حذف حالتی که در آن $w=z$ ، خواهیم داشت:
+\begin{figure}[b]
+\centering
+\includegraphics[scale=0.3]{./4-node-graphlet-2.png}
+\caption{رابطه بین اوربیت‌های $O_6$ و $O_9$.}
+\label{fig:o6-o9-relation}
+\end{figure}
+
+برای مثالی دیگر، رابطه بین اوربیت‌های $O_6$ و $O_9$ را بررسی می‌کنیم (شکل \ارجا{fig:o6-o9-relation}). برای اینکار یک مسیر به طول دو از رئوس $x$ ، $y$ و $z$ را توسط یک مسیر دیگر که از $x$ و $y$ شروع می‌شود، گسترش می‌دهیم؛ قبلاً تعداد این مسیرها را با $p(x,y)$ نمادگذاری کردیم. بسته به اینکه رأس جدید ($w$) با $z$ همسایه باشد یا نه، با یک گرافلت $G_6$ یا $G_4$ روبرو هستیم. با احتساب تقارن، و همچنین حذف حالتی که در آن $w=z$ ، خواهیم داشت:
 \begin{equation*}
 2o_6+2o_9 = \sum_{\substack{y,z: x,z\in N(y)\\G[\{x,y,z\}] \simeq G_1 }}(p(x,y) - 1).
 \end{equation*}
@@ -419,20 +433,6 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 برای جلوگیری از شمارش دوباره یک گرافلت، ترتیب قراردادی $x_2 < x_3 < x_4$ را در نظر می‌گیریم. اگرچه هر دو الگوریتم از نظر تئوری، پیچیدگی یکسان و برابر$O(d^3)$ دارند ولی در عمل برای گراف‌های تنک، الگوریتم دوم بسیار سریعتر است.
 
 این روش را می‌توان برای شمارش گرافلت‌های کامل پنج رأسی و بیشتر هم بکار برد. در هر مرحله، لیست $C_i$ از رئوس کاندید برای $x_i$ را نگهداری می‌کنیم بطوری که این رئوس با تمام رئوس قبل مجاور باشند. یکی از این کاندیدها را به عنوان $x_i$ انتخاب کرده و لیست $C_{i+1} = C_i\cap N(x_i)$ را تشکیل می‌دهیم و اینکار را تا جایی که به تعداد رئوس مورد نظر برسیم ادامه می‌دهیم. برای شمارش تمام گرافلت‌های کامل $k$-رأسی روی رأس $x$، این الگوریتم در زمان $O(d^{k-1})$ قابل اجراست.
-
-\begin{figure}[b]
-\centering
-\includegraphics[scale=0.3]{./4-node-graphlet-1.png}
-\caption{رابطه بین اوربیت‌های $O_9$ و $O_{12}$.}
-\label{fig:o9-o12-relation}
-\end{figure}
-
-\begin{figure}[b]
-\centering
-\includegraphics[scale=0.3]{./4-node-graphlet-2.png}
-\caption{رابطه بین اوربیت‌های $O_6$ و $O_9$.}
-\label{fig:svm-margin}
-\end{figure}
 
 حال که تعداد اوربیت $O_{14}$ را داریم، می‌توانیم در زمان ثابت، معادلات را حل کرده و تعداد اوربیت‌های هر رأس را بدست آوریم. بنابراین کل زمان اجرا برای محاسبه تعداد اوربیت‌های تمام رئوس برابر است با $O(m.d+T_4)$ که $O(T_4) = O(d^3)$ زمان مورد نیاز برای شمارش گرافلت‌های کامل روی چهار رأس است.
 
