Finalize counting algorithm

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -3,9 +3,9 @@
 در این فصل ابتدا نحوه شمارش گرافلت‌ها را شرح داده و سپس گرافلت کرنل گاوسی را معرفی می‌کنیم و به سنجش قدرت آن در جداسازی مدل‌های تصادفی گراف از یکدیگر، می‌پردازیم.
 
 \section{گرافلت‌ها و شمارش آن‌ها}
-گرافلت‌ها، زیرگراف‌های کوچک القایی بین سه تا پنج رأس از یک گراف بزرگتر هستند\جستار{Przulj_2004} که با برچسب $G1,\ldots,G29$ در شکل \ارجا{fig:graphlets} نمایش داده شده‌اند (معمولاً زیرگراف تک یالی $G0$ هم به این مجموعه اضافه می‌شود).  رئوس هر گرافلت به گروه‌های خودریختی\پانوشت{\متن‌لاتین{automorphism}} تقسیم می‌شوند که به آن‌ها اوربیت\پانوشت{\متن‌لاتین{orbit}} گفته می‌شود. دو رأس از یک گرافلت به یک گروه اوربیتی تعلق دارند اگر توسط یک تابع خودریختی به یکدیگر نگاشت شوند. در شکل \ارجا{fig:graphlets} اوربیت‌ها با اعداد صفر تا 72 روی هر گرافلت مشخص شده‌اند و رنگ رئوس نشان‌دهنده تعلق آن‌ها به یک گروه اوربیتی است. از گرافلت‌ها و اوربیت‌ها در اندازه‌گیری شباهت ساختاری شبکه‌های تعاملات پروتئینی\پانوشت{\متن‌لاتین{Protein Interaction Networks}}\جستار{Przulj_2007}، انتخاب مدل تصادفی برای آن‌ها\جستار{Przulj_2004} و همچنین برای تراز کردن\پانوشت{\متن‌لاتین{alignment}} این شبکه‌ها\جستار{Milenkovic_2010}\جستار{Kuchaiev_2010}\جستار{Memisevic_2012} استفاده شده‌است.
+گرافلت‌ها، زیرگراف‌های کوچک القایی بین سه تا پنج رأس از یک گراف بزرگتر هستند\جستار{Przulj_2004} که با برچسب $G1,\ldots,G29$ در شکل \ارجا{fig:graphlets} نمایش داده شده‌اند (معمولاً زیرگراف تک یالی $G0$ هم به این مجموعه اضافه می‌شود).  رئوس هر گرافلت به گروه‌های خودریختی\پانوشت{\متن‌لاتین{automorphism}} تقسیم می‌شوند که به آن‌ها اوربیت\پانوشت{\متن‌لاتین{orbit}} گفته می‌شود. دو رأس از یک گرافلت به یک اوربیت تعلق دارند اگر توسط یک تابع خودریختی به یکدیگر نگاشت شوند. در شکل \ارجا{fig:graphlets}، اوربیت‌ها با اعداد صفر تا 72 روی هر گرافلت مشخص شده‌اند و رنگ رئوس نشان‌دهنده تعلق آن‌ها به اوربیت‌های یکسان است. از گرافلت‌ها و اوربیت‌ها در اندازه‌گیری شباهت ساختاری شبکه‌های تعاملات پروتئینی\پانوشت{\متن‌لاتین{Protein Interaction Networks}}\جستار{Przulj_2007}، انتخاب مدل تصادفی برای آن‌ها\جستار{Przulj_2004} و همچنین برای تراز کردن\پانوشت{\متن‌لاتین{alignment}} این شبکه‌ها\جستار{Milenkovic_2010}\جستار{Kuchaiev_2010}\جستار{Memisevic_2012} استفاده شده‌است.
 
-شمارش گرافلت‌های یک گراف (و طبیعتاً اوربیت‌ها) از لحاظ محاسباتی بسیار زمانبر است. به همین دلیل معمولاً از روش‌های نمونه‌برداری برای تخمین تعداد آن‌ها استفاده می‌شود\جستار{Rahman_2014}\جستار{Milenkovic_2008}. به تازگی الگوریتم ترکیبیاتی شمارش اوربیت‌ها\جستار{Hovcevar_2014} ارائه شده‌است که تعداد آن‌ها را به طور دقیق و در زمان بسیار کم محاسبه می‌نماید. با کمی تغییر در این الگوریتم، می‌توان بجای اوربیت‌ها، تعداد گرافلت‌ها را بدست آورد. ذکر این نکته ضروری است که برخلاف تصور، استفاده از اوربیت‌ها برای تعریف کرنل (بجای گرافلت‌ها) موجب افزایش نویز و در نتیجه، کاهش دقت می‌گردد. در بخش \ارجا{sec:graphlet-vs-orbit} به بررسی این مسئله می‌پردازیم.
+شمارش گرافلت‌های یک گراف (و طبیعتاً اوربیت‌ها) از لحاظ محاسباتی بسیار زمانبر است. به همین دلیل معمولاً از روش‌های نمونه‌برداری برای تخمین تعداد آن‌ها استفاده می‌شود\جستار{Rahman_2014}\جستار{Milenkovic_2008}. به‌تازگی، الگوریتمی برای شمارش اوربیت‌ها\جستار{Hovcevar_2014} ارائه شده‌است که تعداد آن‌ها را به طور دقیق و در زمان بسیار کم محاسبه می‌نماید. با استفاده از این الگوریتم، می‌توان تعداد گرافلت‌ها را نیز محاسبه کرد. ذکر این نکته ضروری است که برخلاف تصور، استفاده از اوربیت‌ها برای تعریف کرنل (بجای گرافلت‌ها) موجب افزایش نویز و در نتیجه، کاهش دقت می‌گردد. در بخش \ارجا{sec:graphlet-vs-orbit} به بررسی این مسئله می‌پردازیم.
 
 
 \begin{figure}[t]
@@ -381,7 +381,7 @@
 \label{fig:graphlets}
 \end{figure}
 
-\subsection{الگوریتم ترکیبیاتی شمارش گرافلت‌ها}
+\subsection{الگوریتم ترکیبیاتی شمارش اوربیت‌ها}
 فرض کنید $x$ هر رأس از گراف $G$ باشد. مسئله، محاسبه تعداد دفعاتی است که $x$  روی اوربیت $O_i$ از گرافلت‌های القایی گراف $G$ قرار گرفته است. این عدد را با $o_i$ نمایش می‌دهیم. الگوریتم بر اساس دستگاهی از معادل خطی کار می‌کند که تعداد اوربیت‌های مختلف، $o_i$ ها، را به هم مربوط می‌کند. از آنجایی که رتبه این دستگاه یکی کمتر از تعداد انواع اوربیت‌ها خواهد بود می‌توان با شمارش تنها یکی از آن‌ها، تعداد مابقی را بدست آورد. در ادامه، نحوه ساخت و حل این دستگاه برای هر رأس را شرح داده و سپس روش محاسبه تعداد گرافلت‌های گراف از روی تعداد اوربیت رئوس را توضیح می‌دهیم.
 
 \subsubsection{شمارش اوربیت‌های چهار رأسی}
@@ -436,14 +436,37 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 
 حال که تعداد اوربیت $O_{14}$ را داریم، می‌توانیم در زمان ثابت، معادلات را حل کرده و تعداد اوربیت‌های هر رأس را بدست آوریم. بنابراین کل زمان اجرا برای محاسبه تعداد اوربیت‌های تمام رئوس برابر است با $O(m.d+T_4)$ که $O(T_4) = O(d^3)$ زمان مورد نیاز برای شمارش گرافلت‌های کامل روی چهار رأس است.
 
-
-
 \subsubsection{شمارش اوربیت‌های پنج رأسی}
-برای شمارش اوربیت‌های چهار رأسی، تمام حالت‌های ممکن جهت گسترش یک گرافلت سه رأسی به گرافلت چهار رأسی را در نظر گرفتیم. اینکار برای گذر از چهار رأس به پنج رأس ممکن نیست زیرا تعداد بسیار زیادی معادله بوجود می‌آید که مستقل نیستند. 
+برای شمارش اوربیت‌های چهار رأسی، تمام حالت‌های ممکن جهت گسترش یک گرافلت سه رأسی به گرافلت چهار رأسی را در نظر گرفتیم. اینکار برای گذر از چهار رأس به پنج رأس ممکن نیست زیرا تعداد بسیار زیادی معادله بوجود می‌آید که مستقل نیستند. پس راه دیگری را پیش می‌گیریم: برای هر اوربیت، فرض می‌کنیم رأس مورد نظر یعنی $x$ روی این اوربیت قرار گرفته است. یک رأس مثل $y$ از گرافلت متناظر انتخاب می‌کنیم و بررسی می‌کنیم که با اضافه کردن یال بین $y$ و دیگر رئوس این گرافلت، اوربیت $x$ چه تغییری می‌کند.
+
+\begin{figure}[t]
+\centering
+\includegraphics[scale=0.3]{./o59-orbit-relation.png}
+\caption{شمارش اوربیت ۵۹. اضافه کردن یال بین رأس $y$ و دیگر رئوس باعث قرار گرفتن $x$ در اوربیت‌های مختلف می‌شود.}
+\label{fig:o59-orbit-relation}
+\end{figure}
+
+در شکل \ارجا{fig:o59-orbit-relation}، رأس $x$ در اوربیت $O_{59}$ از گرافلت $G_{24}$ قرار گرفته و رأس $y$ مشخص گردیده‌است. باقی رئوس با برچسب‌گذاری $x_1$، $x_2$ و $x_3$ مشخص شده‌اند. توجه کنید که حذف $y$ باعث کاهش $G_{24}$ به $G_7$ می‌شود که در این حالت $x$ روی اوربیت $O_{12}$ قرار می‌گیرد.
+
+حال فرض کنید که در حال شمارش اوربیت‌های رأس $x$ هستیم و با زیرگراف القایی $H \simeq G_{7}$ روبرو می‌شویم که $x$ روی اوربیت $O_{12}$ قرار گرفته‌است. رئوس دیگر این زیرگراف را مانند شکل با $x_1$، $x_2$ و $x_3$ برچسب‌گذاری می‌کنیم. در گراف $G$، به تعداد $c(x_1,x_3)$ برای دو رأس $x_1$ و $x_3$ همسایه مشترک وجود دارد. ممکن است بعضی از این رئوس با $x$ یا $x_2$ و یا هر دوی آن‌ها نیز همسایه باشند. شکل \ارجا{fig:o59-orbit-relation} تمام چهار حالت ممکن را نمایش می‌دهد که گرافلت‌های $G_{24}$، $G_{26}$، $G_{27}$ و $G_{28}$ را بوجود می‌آورند و $x$ به ترتیب در اوربیت‌های ۵۹، ۶۵، ۶۸ و ۷۰ قرار می‌گیرد. بنابراین رابطه $o^\prime_{59}+ o^\prime_{65}+o^\prime_{68}+o^\prime_{70} = c(x_1,x_3)$ بدست می‌آید که در آن $o^\prime_i$ تعداد اوربیت‌های $x$ با توجه به زیرگراف $H$ است. برای بدست آوردن ارتباط $o_{59}$ ،  $o_{65}$ ،  $o_{68}$ و  $o_{70}$ باید این عبارت را روی تمام زیرگراف‌های القایی $G_7$ که $x$ روی اوربیت ۱۲ قرار می‌گیرد، جمع کنیم. با احتساب تقارن‌هایی که با تغییر برچسب‌گذاری‌ بوجود می‌آید خواهیم داشت:
+\begin{equation*}
+o_{59}+4o_{65}+2o_{68}+6o_{70} = \sum_{\substack{x_1,x_2,x_3:\\x_1 < x_2\wedge x_3 \notin N(x),\\G[\{x,x_1,x_2,x_3\}]\simeq G_7}}{c(x_1,x_3)+c(x_2,x_3)}
+\end{equation*}
+شرط $x_1 < x_2$ تحت یک برچسب‌گذاری دلخواه روی رئوس، برای جلوگیری از شمارش دوباره گرافلت $G_7$ ضروری است. دو شرط بعد، موقعیت $x$ در اوربیت ۱۲ را بررسی می‌کنند. عبارت $c(x_2,x_3)$ حالتی را در نظر می‌گیرد که نقش $x_1$ و $x_2$ جابجا شده‌باشد.
+
+با استفاده از این تکنیک روی دیگر اوربیت‌ها به غیر از $O_{72}$،
+ ۵۷ معادله مستقل خطی برای ۵۸ اوربیت خواهیم داشت. مانند شمارش اوربیت‌های چهار رأسی، در اینجا نیز $O_{72}$ را که گرافلت کامل پنج رأسی است، بطور کامل شمارش می‌کنیم. روش ساخت معادلات، مستقل خطی بودن آن‌ها را تضمین می‌کند: هر معادله با در نظر گرفتن یک اوربیت تشکیل می‌شود (مثل اوربیت $O_{59}$ در مثال بالا) و دیگر اوربیت‌هایی که در معادله ظاهر می‌شوند مربوط به گرافلت‌هایی هستند که تعداد یال‌های بیشتری دارند (یال‌هایی که به صورت نقطه‌چین بین $y$ و دیگر رئوس در شکل \ارجا{fig:o59-orbit-relation} نمایش داده شده‌اند).
+ 
+در هنگام ساخت معادلات، رأس $y$ را بگونه‌ای انتخاب می‌کنیم که محاسبه عبارات سمت راست معادله، بهینه باشد. یعنی عبارات سمت راست تنها شامل درجه رئوس، تعداد همسایه‌های مشترک جفت رئوس مجاور، $c(u,v)$، و یا تعداد سه‌تایی‌های متصل، $c(u,v,t)$، باشد.
+
+برای اینکار، $y$ باید طوری انتخاب شود که اولاً  باقی رئوس، یک گرافلت چهار رأسی را تشکیل بدهند. یعنی حذف $y$ گرافلت را به دو قسمت تقسیم نکند. دوماً رأس $y$ باید حداکثر سه یال به رئوس گرافلت مورد نظر داشته باشد. اینکار از شمارش تعداد چهارتایی‌های متصل ($c(u,v,t,w)$) جلوگیری می‌کند. و در نهایت اگر $y$ سه همسایه داشته باشد، باید این سه همسایه، متصل باشند. رأسی که در این شروط صدق کند برای همه اوربیت‌ها به غیر از اوربیت $O_{72}$ وجود دارد.
+
+محاسبه مقادیر $c(u,v,t)$‌ برای تمام سه‌تایی‌های متصل، در زمان $O(e.d^2)$ و ذخیره در فضای $O(e.d)$، قابل انجام است. همچنین محاسبه عبارات سمت راست، نیاز به شمارش تمام گرافلت‌های چهار رأسی دارد که در زمان $O(e.d^2)$ قابل انجام است. بنابراین شمارش تمام اوربیت‌ها برای تمام رئوس گراف $G$ در زمان $O(e.d^2 + T_5)$ و فضای $O(e.d)$ انجام می‌شود که در آن $O(T_5)$ زمان لازم برای شمارش تمام گرافلت‌های کامل پنج رأسی ($G_{29}$) است. نتیجه می‌شود که کران بالای زمان اجرای این الگوریتم برابر $O(n.d^4)$ است. البته سهم $O(T_5)$ در زمان اجرا معمولاً به حدی کم است که قابل چشم‌پوشی است زیرا گرافلت پنج رأسی کامل به ندرت در گراف‌ها به چشم می‌خورد.
 
 \subsection{تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها}
+تا اینجا برای هر رأس $x$ از گراف $G$، یک بردار با ۷۳ مؤلفه معادل ۷۳ اوربیت ساخته‌ایم که مؤلفه $i$ از این بردار، برابر $o_i$ محاسبه شده برای این رأس است. این عدد نشان می‌دهد که $x$ روی چند اوربیت از نوع $O_i$ قرار دارد. همچنین می‌توان به $x$، برداری ۲۹ تایی از تعداد گرافلت‌هایی که این رأس روی آن‌هاست، نسبت داد. هر مؤلفه $i$ از این بردار، نشان می‌دهد که $x$ روی چند گرافلت از نوع $G_i$ قرار دارد. برای محاسبه این بردار، کافی است $o_i$ هایی را که متعلق به یک گرافلت هستند، با هم جمع کنیم.
 
-\subsection{مقایسه سرعت اجرا}
+حال می‌خواهیم تعداد کل تکرار هر گرافلت‌ در گراف $G$ را بدست آوریم. نتیجه، یک بردار ۲۹ تایی مثل $C_G$ خواهد بود که هر مؤلفه $i$ از آن، تعداد تکرار گرافلت $G_i$ در گراف $G$ را نشان می‌دهد. هر نمونه از گرافلت $G_i$ در گراف $G$، یکبار توسط هر رأسش دیده می‌شود. در نتیجه، بردارهای گرافلت تمام رئوس گراف را با هم جمع کرده و هر مؤلفه را بر اندازه گرافلت متناظرش تقسیم می‌کنیم. بردار حاصل، $C_G$ خواهد بود.
 
 \section{گرافلت کرنل گاوسی}
 فرض کنید برای دو گراف $G$ و $G^\prime$ ، بردار شمارش گرافلت‌ها، $C_G$ و $C_{G^\prime}$ را در اختیار داریم. حال باید این دو بردار را با یکدیگر مقایسه کرده و فاصله آن‌ها را تعیین کنیم. برای کاهش تأثیر اندازه گراف‌ بر مقایسه و همچنین جلوگیری از تأثیر فراوانی زیاد یک گرافلت بر کل مقایسه، بردارها را به صورت
@@ -451,7 +474,7 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 \label{eq:feature-vector}
 \hat{C}_G = (-\log(\dfrac{C_G(0)}{\sum _{i=0}^{29} C_G(i)}),...,-\log(\dfrac{C_G(29)}{\sum _{i=0}^{29} C_G(i)}))
 \end{equation}
-نرمال می‌کنیم. حال می‌توان از هر تابع کرنل دلخواهی برای یافتن فاصله این بردارها از یکدیگر، استفاده کرد. طبیعی است که انتخاب تابع مقایسه در دقت کرنل نهایی بسیار تأثیرگذار خواهد بود. همانطور که در بخش \ارجا{sec:compare-kernels-on-graphlet-vector} خواهید دید، تابع گاوسی روی این بردارها بهترین عملکرد را دارد. بنابراین گرافلت کرنل گاوسی $k$ را به صورت
+نرمال می‌کنیم و از تابع کرنل گاوسی برای مقایسه این بردارها بهره می‌بریم. بنابراین گرافلت کرنل گاوسی $k$ را به صورت
 \begin{equation}
 \label{eqn:kernelfunction}
 k(G,G') = exp(-\gamma\parallel \hat{C}_G - \hat{C}_{G'}\parallel^2)
